# Sancta_Nexus

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_core_platform.py  003_journal_favorites.py  004_intention_moderation.py  005_subscriptions.py  006_diocese_invite_codes.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  feature_flags.py  llm.py  middleware.py  rbac.py  safety.py  security.py
backend/app/middleware/: langsmith_context.py  timing.py
backend/app/models/: database.py
backend/app/schemas/: lectio_divina.py
backend/app/workers/: __init__.py  arq_settings.py  pool.py  tasks.py
backend/data/corpus/: seed_bible.json  seed_catechism.json  seed_councils.json  seed_encyclicals.json  seed_patristic.json
backend/scripts/: ingest_corpus.py
backend/tests/: conftest.py
backend/tests/integration/: test_community_routes.py  test_examen.py  test_lectio_divina.py  test_new_features_integration.py  test_orchestrate.py  test_reflection_assistant.py  test_safety_critical.py  test_spiritual_director.py
backend/tests/unit/: test_admin_routes.py  test_arq_worker.py  test_auth_routes.py  test_auth_security.py  test_bible_helpers.py  test_bible_routes.py  test_billing.py  test_billing_routes.py  test_breviary_and_opening_messages.py  test_breviary_routes.py  test_chunker.py  test_church_rag_and_intentions.py  test_community_routes.py  test_corpus_registry.py  test_database_enums.py  test_diocese_licensing.py  test_director_orchestrator.py  test_doctrinal_review.py  test_doctrine_and_classifier.py  test_emotion_agents.py  test_emotion_service.py  test_emotion_service_extended.py  (+65 more)
(+187 files in other folders)
