[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "sancta-nexus"
version = "1.0.0"
description = "AI-powered prayer and spiritual direction platform with 47 agents for Lectio Divina"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sancta Nexus Team" },
]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # LLM orchestration
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",

    # Vector, graph, and cache stores
    "qdrant-client>=1.7.0",
    "neo4j>=5.15.0",
    "redis>=5.0.0",

    # Task queue
    "celery>=5.3.0",

    # Relational database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",

    # ML and embeddings
    "transformers>=4.37.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.3.0",
    "numpy>=1.26.0",

    # Auth and HTTP
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",

    # External AI and media APIs
    "elevenlabs>=1.0.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
